--- a/porfolio.html
+++ b/porfolio.html
@@ -79,103 +79,123 @@
 
           <ul class="projects-list list">
             <li class="item">
-              <img
-                src="./images/img_project1.jpg"
-                alt="1 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project1.jpg"
+                  alt="1 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project2.jpg"
-                alt="2 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                <p class="project-type">Дизайн</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project2.jpg"
+                  alt="2 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project3.jpg"
-                alt="3 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Ресторан Seafood</h2>
-                <p class="project-type">Додаток</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project3.jpg"
+                  alt="3 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project4.jpg"
-                alt="4 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Проєкт Prime</h2>
-                <p class="project-type">Маркетинг</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project4.jpg"
+                  alt="4 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Проєкт Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project5.jpg"
-                alt="5 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Проєкт Boxes</h2>
-                <p class="project-type">Додаток</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project5.jpg"
+                  alt="5 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Проєкт Boxes</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project6.jpg"
-                alt="6 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project6.jpg"
+                  alt="6 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project7.jpg"
-                alt="7 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Видання Limited Edition</h2>
-                <p class="project-type">Дизайн</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project7.jpg"
+                  alt="7 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Видання Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project8.jpg"
-                alt="8 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Проєкт LAB</h2>
-                <p class="project-type">Маркетинг</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project8.jpg"
+                  alt="8 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Проєкт LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/img_project9.jpg"
-                alt="9 project"
-                width="370"
-              />
-              <div class="project-container">
-                <h2 class="project-title">Growing Business</h2>
-                <p class="project-type">Додаток</p>
-              </div>
+              <a href="#" class="project-link link">
+                <img
+                  src="./images/img_project9.jpg"
+                  alt="9 project"
+                  width="370"
+                />
+                <div class="project-container">
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
