--- a/porfolio.html
+++ b/porfolio.html
@@ -234,7 +234,7 @@
           </div>
 
           <div class="footer-socials">
-            <h3 class="footer-socials-title">Приєднуйтесь</h3>
+            <p class="footer-socials-title">Приєднуйтесь</p>
             <ul class="footer-socials-list list">
               <li>
                 <a href="#" class="footer-socials-link">
