--- a/porfolio.html
+++ b/porfolio.html
@@ -26,12 +26,14 @@
         </a>
         <ul class="header-nav list">
           <li class="item">
-            <a href="./index.html" class="link">Студія</a>
+            <a href="./index.html" class="link nav-link">Студія</a>
           </li>
           <li class="item">
-            <a href="./porfolio.html" class="link current">Портфоліо</a>
+            <a href="./porfolio.html" class="link nav-link current"
+              >Портфоліо</a
+            >
           </li>
-          <li class="item"><a href="#" class="link">Контакти</a></li>
+          <li class="item"><a href="#" class="link nav-link">Контакти</a></li>
         </ul>
 
         <ul class="header-contacts list">
@@ -80,11 +82,19 @@
           <ul class="projects-list list">
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project1.jpg"
-                  alt="1 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project1.jpg"
+                    alt="1 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+
                 <div class="project-container">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="project-type">Веб-сайт</p>
@@ -93,11 +103,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project2.jpg"
-                  alt="2 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project2.jpg"
+                    alt="2 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">
                     Постер New Orlean vs Golden Star
@@ -108,11 +125,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project3.jpg"
-                  alt="3 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project3.jpg"
+                    alt="3 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Ресторан Seafood</h2>
                   <p class="project-type">Додаток</p>
@@ -121,11 +145,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project4.jpg"
-                  alt="4 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project4.jpg"
+                    alt="4 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Проєкт Prime</h2>
                   <p class="project-type">Маркетинг</p>
@@ -134,11 +165,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project5.jpg"
-                  alt="5 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project5.jpg"
+                    alt="5 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Проєкт Boxes</h2>
                   <p class="project-type">Додаток</p>
@@ -147,11 +185,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project6.jpg"
-                  alt="6 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project6.jpg"
+                    alt="6 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Inspiration has no Borders</h2>
                   <p class="project-type">Веб-сайт</p>
@@ -160,11 +205,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project7.jpg"
-                  alt="7 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project7.jpg"
+                    alt="7 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Видання Limited Edition</h2>
                   <p class="project-type">Дизайн</p>
@@ -173,11 +225,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project8.jpg"
-                  alt="8 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project8.jpg"
+                    alt="8 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Проєкт LAB</h2>
                   <p class="project-type">Маркетинг</p>
@@ -186,11 +245,18 @@
             </li>
             <li class="item">
               <a href="#" class="project-link link">
-                <img
-                  src="./images/img_project9.jpg"
-                  alt="9 project"
-                  width="370"
-                />
+                <div class="project-overlay">
+                  <img
+                    src="./images/img_project9.jpg"
+                    alt="9 project"
+                    width="370"
+                  />
+                  <p class="project-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-container">
                   <h2 class="project-title">Growing Business</h2>
                   <p class="project-type">Додаток</p>
