--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link">
-              <svg class="header-icon" width="16" height="12">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -424,7 +424,7 @@
           </div>
 
           <div class="footer-socials">
-            <h3 class="footer-socials-title">Приєднуйтесь</h3>
+            <p class="footer-socials-title">Приєднуйтесь</p>
             <ul class="footer-socials-list list">
               <li>
                 <a href="#" class="footer-socials-link">
